# mtg-life-count

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-apk.yml  deploy-pages.yml
docs/superpowers/plans/: 2026-03-21-vertical-ux-redesign.md  2026-03-22-starting-player-screen.md
docs/superpowers/specs/: 2026-03-21-vertical-ux-redesign-design.md  2026-03-22-starting-player-screen-design.md
src/: game_state.py  life_log.py  main.py  notes_panel.py  player_panel.py  starting_screen.py  theme.py  turn_bar.py
tests/: test_game_state.py  test_starting_screen.py
